Fixed spacing issue between task options

--- a/Todo List/styles.css
+++ b/Todo List/styles.css
@@ -26,7 +26,7 @@ body {
 }
 
 #newTaskInput {
-    padding-left: 10px;
+    padding-left: 5px;
     width: 85%;
 }
 
@@ -44,6 +44,15 @@ body {
 
 .taskItem:last-child {
     margin-bottom: 0;
+}
+
+.taskOptions {
+    display: flex;
+    justify-content: space-between;
+}
+
+.completeBtn {
+    margin-right: 5px;
 }
 
 .completed {
